--- a/sweets.html
+++ b/sweets.html
@@ -65,12 +65,13 @@
                   <div class="text"><span class="bold">Halo halo</span> get its name is translated to mix mix. You take shaved ice, evaporated milk, sugar, and topping and mix it together with a spoon. </div>
                   <div class="numbertext">4 of 4</div>
                 </div>
-
+              </div>
                 <div style="text-align:center">
               <span class="dot" onclick="currentSlide(1)"></span>
               <span class="dot" onclick="currentSlide(2)"></span>
               <span class="dot" onclick="currentSlide(3)"></span>
               <span class="dot" onclick="currentSlide(4)"></span>
+            </div>
 
     <!-- <p class="photocred"><span>Photo credits</span>: Banana Cue: wikimedia commons,
        Bibingka: c.flessen on flickr, Halo Halo: my photo taken at Mang Inasal</p> -->
