--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
   Your browser does not support HTML5 video.
 </video> -->
   <!-- I used W3schools.com primarily for my code in html lines 48-51.-->
-<iframe width="560" height="315" src="https://www.youtube.com/embed/c12zRnFUTdo" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/c12zRnFUTdo" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen aria-lablel="First time trying traditional Filipino Food"></iframe>
 <p> Video courtesy of <a href= "https://www.youtube.com/watch?v=c12zRnFUTdo"> Strictly Dumpling</a>.
 <!-- I used W3schools.com primarily for my code in html lines 53-54.-->
 <!-- <figure id="ozplayer-1-container" class="ozplayer-container">
